@@ -6,6 +6,7 @@ Changes in 1.3:
 - Add new SignalCatcher class to handle UNIX signals (296835)
 - Make TimeEstimator return sortable values (298542)
 - Keep track of partitions files of torrents are on
+- Add methods to check if storage is mounted
 
 Changes in 1.2.1:
 - Fix deadlock in webseeding code (295719)
